--- a/src/assets/main.less
+++ b/src/assets/main.less
@@ -203,19 +203,57 @@ body {
         opacity: 0.8;
     }
 
-    .overlay {
-        position: fixed;
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
-        background: @black;
-        opacity: 0.5;
-    }
 }
 
 .modal.open {
     display: block;
+}
+
+.overlay {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: @black;
+    z-index: 1;
+}
+
+.loading {
+
+    .span {
+        font-size: 22px;
+        text-align: center;
+        color: @light;
+    }
+
+    &.overlay {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+.is-have-ethereum {
+    height: 120px;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    background: @black;
+    padding: 15px 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    p {
+        text-align: center;
+        font-size: 16px;
+    }
+
+    a {
+        text-decoration: underline;
+    }
 }
 
 // Screen
