--- a/src/assets/main.less
+++ b/src/assets/main.less
@@ -220,6 +220,11 @@ body {
 }
 
 .loading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
 
     .span {
         font-size: 22px;
@@ -232,6 +237,96 @@ body {
         justify-content: center;
         align-items: center;
     }
+}
+
+.loader_spinner {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: @black;
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    filter: brightness(0.5);
+}
+
+@loaderSize : 75px;
+@radThickness : @loaderSize/10;
+@spinSpeed : 1s;
+@backgroundColor : #eee;
+@masksColor : @black;
+@elementColor : #6a3ab8;
+@middleCircleSize : 70%;
+
+
+
+.animation (@params) {
+    -webkit-animation: @params;
+    -moz-animation: @params;
+    animation: @params;
+}
+
+/* Animation */
+.spin {
+    .animation(spin @spinSpeed infinite linear);
+}
+
+@-webkit-keyframes spin {
+    to {
+        -webkit-transform: rotate(360deg);
+    }
+}
+
+@-moz-keyframes spin {
+    to {
+        -moz-transform: rotate(360deg);
+    }
+}
+
+
+/* Styling */
+.loader {
+    background-color: @backgroundColor;
+    border-radius: 100%;
+    position: relative;
+    height: @loaderSize;
+    width: @loaderSize;
+    overflow: hidden;
+
+    .a {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        margin: -@middleCircleSize/2 0 0 -@middleCircleSize/2;
+        width: @middleCircleSize;
+        height: @middleCircleSize;
+        background-color: @masksColor;
+        border-radius: 100%;
+        z-index: 3;
+    }
+
+    .b {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+
+        .c {
+            @thisWidth : @loaderSize*0.2;
+            position: absolute;
+            top: 1%;
+            left: 50%;
+            margin: 0 0 0 -@thisWidth/2;
+            height: 14px;
+            width: @thisWidth;
+            background: @elementColor;
+        }
+    }
+
 }
 
 .is-have-ethereum {
@@ -967,6 +1062,10 @@ body {
 
     .screen_data .block-list .block.info {
         flex-direction: column;
+    }
+
+    .screen_data .block-list .block .form .copy {
+        display: none;
     }
 }
 
