--- a/src/assets/main.less
+++ b/src/assets/main.less
@@ -18,6 +18,26 @@
     box-sizing: border-box;
 }
 
+/* полоса прокрутки (скроллбар) */
+::-webkit-scrollbar {
+    width: 10px;
+    /* ширина для вертикального скролла */
+    height: 8px;
+    /* высота для горизонтального скролла */
+    background-color: @light;
+}
+
+/* ползунок скроллбара */
+::-webkit-scrollbar-thumb {
+    background-color: @black;
+    border-radius: 9em;
+    cursor: pointer;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #253861;
+}
+
 #body {
     width: 100%;
     height: 100%;
@@ -860,6 +880,7 @@ body {
                 border: 1px solid #FFFFFF;
                 border-radius: 10px;
                 gap: 10px;
+                overflow: auto;
 
                 p {
                     font-size: 18px;
