--- a/src/assets/main.less
+++ b/src/assets/main.less
@@ -45,9 +45,13 @@
   justify-content: flex-start;
   align-items: center;
   flex-direction: column;
+
+  &.disabled {
+    overflow: hidden;
+  }
 }
 
-body {
+#body {
   background-color: #000000;
 }
 
@@ -58,6 +62,7 @@ body {
   justify-content: flex-start;
   align-items: center;
   flex-direction: column;
+  position: relative;
 }
 
 // form
@@ -675,20 +680,21 @@ body {
   }
 
   .screen__title {
-    max-width: 1290px;
+    max-width: 960px;
+    margin-left: 330px;
     align-items: start;
   }
 
   .list.levels {
-    max-width: 1290px;
+    max-width: 960px;
     width: 100%;
+    margin-left: 330px;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     gap: 30px;
 
     .card.disabled {
       filter: brightness(0.5);
-
     }
 
     .card.disabled::before {
@@ -819,6 +825,8 @@ body {
   }
 
   .block-list {
+    max-width: 960px;
+    margin-left: 330px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 
@@ -884,7 +892,6 @@ body {
       }
 
       .passwords {
-        max-width: 410px;
         width: 100%;
         height: 200px;
         padding: 20px 30px;
@@ -906,6 +913,7 @@ body {
       }
 
       .referal-link {
+        width: 100%;
         height: 100px;
         font-size: 16px;
       }
@@ -914,6 +922,13 @@ body {
 
     .block.info {
       margin-top: 100px;
+
+      .item {
+        flex-direction: column;
+        justify-content: start;
+        align-items: start;
+        gap: 20px;
+      }
     }
   }
 
@@ -956,6 +971,129 @@ body {
   }
 }
 
+.header-ui-controller {
+  max-width: 1290px;
+  width: 100%;
+  display: flex;
+  position: relative;
+}
+
+.game-sidebar-container {
+  width: 300px;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 430px;
+  z-index: 1;
+
+  @media screen and (max-width: 1024px) {
+    width: 100%;
+    min-height: 100vh;
+    top: 0;
+
+    &.active .game-sidebar {
+      display: flex;
+    }
+
+  }
+
+
+  .trigger {
+    display: none;
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    z-index: 1;
+    width: 25px;
+    height: 15px;
+    position: relative;
+
+    .bar {
+      width: 25px;
+      height: 3px;
+      background: #fff;
+      border-radius: 5px;
+      position: absolute;
+
+      &.middle {
+        bottom: 0;
+        top: 0;
+        margin: auto;
+      }
+
+      &.left {
+        top: 0;
+      }
+
+      &.right {
+        bottom: 0;
+      }
+    }
+    @media screen and (max-width: 1024px) {
+     display: block;
+
+    }
+  }
+
+  &.active .trigger {
+    .middle {
+      display: none;
+    }
+
+    .left {
+      transform: rotate(45deg);
+      bottom: 0;
+      top: 0;
+      margin: auto;
+    }
+
+    .right {
+      transform: rotate(-45deg);
+      bottom: 0;
+      top: 0;
+      margin: auto;
+    }
+  }
+
+  .game-sidebar {
+    width: inherit;
+    top: 30px;
+
+    justify-content: start;
+    align-items: start;
+
+    @media screen and (max-width: 1024px) {
+      width: 100%;
+      height: 100%;
+      border-radius: 0 !important;
+      padding-top: 80px;
+      position: absolute;
+      top: 0;
+      display: none;
+    }
+
+    &.fixed {
+      position: fixed;
+
+      @media screen and (max-width: 1024px) {
+        position: absolute;
+      }
+    }
+
+    .link {
+      font-size: 16px;
+      font-weight: bold;
+      font-family: "TTOctosquares";
+      text-decoration: none;
+    }
+
+    .link:hover,
+    .link.active {
+      color: @active;
+    }
+  }
+}
+
 @media screen and (min-width: 1920px) {
   .rocket .img {
     max-width: 840px;
@@ -987,6 +1125,15 @@ body {
   }
 }
 
+@media screen and (max-width: 1300px) {
+
+  .screen_levels .list.levels,
+  .screen_levels .screen__title,
+  .screen_data .block-list {
+    margin-left: 0;
+  }
+}
+
 @media screen and (max-width: 1024px) {
 
   .rocket,
@@ -995,12 +1142,12 @@ body {
     display: none;
   }
 
-  .list.levels {
-    grid-template-columns: repeat(2, 1fr) !important;
-  }
-
   .background {
     height: 1000px;
+  }
+
+  .list.levels {
+    grid-template-columns: repeat(2, 1fr) !important;
   }
 }
 
