--- a/src/assets/main.less
+++ b/src/assets/main.less
@@ -117,6 +117,7 @@
   color: @light;
   cursor: pointer;
   text-transform: uppercase;
+  text-decoration: none;
   padding: 20px;
   background: radial-gradient(92.34% 92.34% at 57.88% 0%, rgba(255, 255, 255, 0.5) 0%, rgba(255, 255, 255, 0) 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */,
   linear-gradient(91.21deg, #33B184 0%, #6A3AB8 100%);
@@ -787,6 +788,7 @@
         background: radial-gradient(92.34% 92.34% at 57.88% 0%, rgba(255, 255, 255, 0.5) 0%, rgba(255, 255, 255, 0) 100%),
         linear-gradient(180deg, #65E3B6 0%, #C5F9E6 100%);
         box-shadow: inset 0px 4px 20px rgba(255, 255, 255, 0.9);
+        transition: 0.5s;
       }
 
       .buttons {
@@ -992,6 +994,7 @@
     min-height: 0;
     height: 0;
     top: 0;
+    z-index: 2;
 
     &.active .game-sidebar {
       display: flex;
